--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nyuen.test_fivehundred"
+    package="com.nyuen.five00dp"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,14 +16,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity" >
+            android:name="com.nyuen.five00dp.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="PhotoDetailActivity"></activity>
+        <activity android:name="com.nyuen.five00dp.PhotoDetailActivity"></activity>
     </application>
  
     
