--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = ActionBarSherlock
 	url = git://github.com/JakeWharton/ActionBarSherlock.git
 	ignore = dirty
+[submodule "500px-android-sdk"]
+	path = 500px-android-sdk
+	url = git@github.com:500px/500px-android-sdk.git
