--- a/five00dp/project.properties
+++ b/five00dp/project.properties
@@ -13,4 +13,5 @@
 # Project target.
 target=android-16
 android.library.reference.1=../500px-android-sdk
+android.library=false
 android.library.reference.2=../ActionBarSherlock/library
