--- a/five00dp/AndroidManifest.xml
+++ b/five00dp/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/ic_launcher"
         android:logo="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.five00dp" >
         <activity
             android:name="com.nyuen.five00dp.MainActivity" >
             <intent-filter>
