--- a/five00dp/AndroidManifest.xml
+++ b/five00dp/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     
     <application
         android:icon="@drawable/ic_launcher"
@@ -24,6 +25,24 @@
             </intent-filter>
         </activity>
         <activity android:name="com.nyuen.five00dp.PhotoDetailActivity"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:windowSoftInputMode="adjustResize" >
+        </activity>
+        
+        
+        <service
+            android:name=".account.AccountAuthenticatorService"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        
     </application>
  
     
