--- a/five00dp/AndroidManifest.xml
+++ b/five00dp/AndroidManifest.xml
@@ -6,32 +6,37 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
-    
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
     <application
         android:icon="@drawable/ic_launcher"
-        android:logo="@drawable/logo"
         android:label="@string/app_name"
+        android:logo="@drawable/logo"
         android:theme="@style/Theme.five00dp" >
-        <activity
-            android:name="com.nyuen.five00dp.MainActivity" >
+        <activity android:name="com.nyuen.five00dp.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nyuen.five00dp.PhotoDetailActivity"></activity>
+        <activity android:name="com.nyuen.five00dp.PhotoDetailActivity" >
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize" >
         </activity>
-        
-        
+        <activity android:name="com.nyuen.five00dp.ProfileActivity" >
+        </activity>
+
         <service
             android:name=".account.AccountAuthenticatorService"
             android:exported="true" >
@@ -43,8 +48,6 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
-        
     </application>
- 
-    
+
 </manifest>
