--- a/five00dp/AndroidManifest.xml
+++ b/five00dp/AndroidManifest.xml
@@ -15,12 +15,7 @@
     </uses-permission>
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:logo="@drawable/logo"
-        android:theme="@style/Theme.five00dp" >
+    <uses-permission android:name="android.permission.writ" /><application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:logo="@drawable/logo" android:theme="@style/Theme.five00dp" android:hardwareAccelerated="true">
         <activity android:name="com.nyuen.five00dp.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,26 +23,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nyuen.five00dp.PhotoDetailActivity" >
+        <activity android:name="com.nyuen.five00dp.PhotoDetailActivity">
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:theme="@style/Theme.five00dp.NoActionBar"
-            android:windowSoftInputMode="adjustResize" >
+        <activity android:name=".LoginActivity" android:theme="@style/Theme.five00dp.NoActionBar" android:windowSoftInputMode="adjustResize">
         </activity>
-        <activity android:name="com.nyuen.five00dp.ProfileActivity" >
+        <activity android:name="com.nyuen.five00dp.ProfileActivity">
         </activity>
 
-        <service
-            android:name=".account.AccountAuthenticatorService"
-            android:exported="true" >
+        <service android:name=".account.AccountAuthenticatorService" android:exported="true">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
 
-            <meta-data
-                android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator" />
+            <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator" />
         </service>
     </application>
 
