--- a/five00dp/project.properties
+++ b/five00dp/project.properties
@@ -11,7 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
-android.library.reference.1=../500px-android-sdk
+target=android-17
+android.library.reference.1=..\\500px-android-sdk
 android.library=false
-android.library.reference.2=../ActionBarSherlock/library
+android.library.reference.2=..\\ActionBarSherlock\\library
+android.library.reference.3=../SlidingMenu/library
