--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "500px-android-sdk"]
 	path = 500px-android-sdk
 	url = git@github.com:500px/500px-android-sdk.git
+[submodule "SlidingMenu"]
+	path = SlidingMenu
+	url = git@github.com:nathan-yuen/SlidingMenu.git
