--- a/five00dp/AndroidManifest.xml
+++ b/five00dp/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.writ" /><application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:logo="@drawable/logo" android:theme="@style/Theme.five00dp" android:hardwareAccelerated="true">
-        <activity android:name="com.nyuen.five00dp.MainActivity">
+        <activity android:name="com.nyuen.five00dp.PhotoStreamActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
