--- a/five00dp/project.properties
+++ b/five00dp/project.properties
@@ -15,4 +15,5 @@ target=android-17
 android.library.reference.1=..\\500px-android-sdk
 android.library=false
 android.library.reference.2=..\\ActionBarSherlock\\library
-android.library.reference.3=../SlidingMenu/library
+android.library.reference.3=..\\SlidingMenu\\library
+android.library.reference.4=../PhotoView/library
